--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,7 @@
+// COLORS
+$bigStone: rgba(26, 46, 68, 1);
+$cornflowerBlue: rgba(100, 149, 237, 1);
+
 /* BREAKPOINTS*/
 $phone-landscape: '425px';
 $tablet: '768px';
@@ -6,5 +10,6 @@ $desktop: '1024px';
 $desktopL: '1200px';
 $desktopXL: '1440px';
 
-$colorBlue: rgba(100, 149, 237, 1);
+$color-primary-blue: $bigStone;
+$colorBlue: $cornflowerBlue;
 $colorBlueTransparent: rgba(100, 149, 237, .3);
