--- a/src/modules/ui-timeline/components/timeline-item/timeline-item.component.scss
+++ b/src/modules/ui-timeline/components/timeline-item/timeline-item.component.scss
@@ -8,7 +8,7 @@
   padding: 12px;
   margin-bottom: 20px;
   background-color: #fff;
-  border-top: 4px solid $colorBlue;
+  border-top: 4px solid $color-blue;
 
   .date {
     text-align: center;
