--- a/src/modules/navigation/components/navigation/navigation.component.scss
+++ b/src/modules/navigation/components/navigation/navigation.component.scss
@@ -1,61 +1,48 @@
 @import "mixins";
 
 :host {
-  display: flex;
   align-items: center;
+  background-color: $color-primary-blue;
+  display: flex;
+  height: 60px;
   justify-content: center;
-  background-color: rgba(255, 255, 255, 1);
-  z-index: 10000;
-  position: fixed;
-  top: 0;
   left: 0;
+  position: fixed;
   right: 0;
+  top: 0;
   transition: background-color .4s ease;
+  z-index: 10000;
   @include shadow();
 
-  .row {
+  .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
     max-width: 960px;
+    height: 100%;
   }
 
-  a.logo {
+  a.page-headline {
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
     text-decoration: none;
-    width: 60px;
-    height: 60px;
-    margin-left: 12px;
+    height: 100%;
+    margin: 0;
+    padding: 0 $space-phone;
 
-    span {
-      text-transform: uppercase;
-      font-weight: 700;
-      font-size: 3.2rem;
-      transition: color 1s ease;
-
-      &.logo-h {
-        color: #333;
-      }
-
-      &.logo-e {
-        color: cornflowerblue;
-      }
+    h1 {
+      color: #fff;
+      font-size: 1rem;
+      line-height: 1.4;
     }
-  }
 
-  &.transparent {
-    background-color: rgba(255, 255, 255, 0);
-    box-shadow: none;
-
-    .logo {
-      span {
-        &.logo-h {
-          color: rgba(255, 255, 255, .7);
-        }
-      }
+    h2 {
+      font-size: .7rem;
+      color: #ddd;
+      letter-spacing: 1px;
+      line-height: 1;
     }
   }
 
