--- a/src/styles/_default.scss
+++ b/src/styles/_default.scss
@@ -3,7 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Roboto', Fallback, sans-serif;
-  font-size: 10px;
+  font-size: 16px;
   font-weight: 400;
 }
 
@@ -35,34 +35,13 @@ a, p, li {
   color: #666;
 }
 
-h1, h2 {
+h1, h2, h3, h4, h5 {
+  font-size: 1rem;
   line-height: 1;
-}
-
-h2 {
-  font-size: 2rem;
-  text-align: center;
-  margin-bottom: 32px;
-  padding-bottom: 8px;
-  line-height: 1.2;
-  color: #333;
-  border-bottom: 1px solid #ccc;
-}
-
-h3 {
-  font-size: 1.8rem;
-  text-align: center;
-  margin-bottom: 12px;
-  line-height: 1.2;
-  color: #444;
-}
-
-h4 {
-  font-size: 1.6rem;
-  text-align: center;
-  margin-bottom: 8px;
-  line-height: 1.2;
-  color: #333;
+  margin: 0;
+  padding: 0;
+  outline: none;
+  font-weight: 300;
 }
 
 @include breakpoint('phone-landscape') {
