--- a/src/modules/content/components/v-card/v-card.component.html
+++ b/src/modules/content/components/v-card/v-card.component.html
@@ -6,31 +6,52 @@
   />
 </div>
 <div class="v-card-content">
-  <div class="v-card-content__info">
-    <h1>Heiko <span>Ellerbrock</span></h1>
-    <h2>Softwareentwickler</h2>
-  </div>
-  <ul class="v-card-content__list">
-    <li>
-      <span class="title">Alter</span>
-      <span [innerHTML]="getAge()"></span>
-    </li>
-    <li>
-      <span class="title">Adresse</span>
-      <span>Kölner Str. 7a, 50226 Frechen</span>
-    </li>
-    <li>
-      <span class="title">Email</span>
-      <span>info@heikoellerbrock.de</span>
-    </li>
-    <li>
-      <span class="title">Mobil</span>
-      <span>0172 6174800</span>
-    </li>
+  <p>
+    Hallo!
+  </p>
+  <p>
+    Mein Name ist Heiko und ich arbeite als <em>Freelancer</em> in der <em>Software-Entwicklung</em>. Seit über 10
+    Jahren durfte ich
+    Erfahrungen in der Entwicklung skalierbarer <em>Web-Applikationen</em> und <em>E-Commerce Lösungen</em> machen.
+    Dabei liegt mein
+    persönlicher Fokus auf dem Frontend und den Benutzern.
+  </p>
+  <p>
+    Technologisch liegt mein Schwerpunkt auf <em>JavaScript</em> und dort vor allem auf der Entwicklung mit
+    <em>Angular</em>. Ich habe 2010 bereits mit <em>ES5</em>, <em>HTML4</em>, <em>CSS2</em> und ersten Version von
+    <em>AngularJS</em> begonnen. Damals tatsächlich noch mit responsivem Design für den <em>Internet Explorer 7</em>.
+  </p>
+  <p>
+    Mittlerweile sind es selbstverständlich die neusten Versionen dieser Technologien: <em>ES6</em>, <em>HTML5</em>,
+    <em>CSS3</em>, <em>SCSS</em>, <em>Angular</em> und andere. Aber auch <em>React</em>, <em>Vue</em> und
+    <em>NodeJS</em>
+    habe ich bereits erfolgreich und mit viel Freude eingesetzt.
+  </p>
+  <p>
+    Dabei war ich in den unterschiedlichsten Branchen tätig:
+  </p>
+  <ul>
+    <li><em>Gesundheitswesen</em></li>
+    <li><em>Telekommunikation</em></li>
+    <li><em>Personalberatung</em></li>
+    <li><em>Sport</em></li>
+    <li><em>Versicherungen und Finanzen</em></li>
+    <li><em>Handel</em></li>
+    <li><em>Industrie</em></li>
+    <li><em>Medien</em></li>
   </ul>
-</div>
-<div class="v-card-social">
-  <a href="https://www.linkedin.com/in/heiko-ellerbrock-a57643157/" target="_blank"><i
-    class="icofont-linkedin linkedin"></i></a>
-  <a href="https://www.xing.com/profile/Heiko_Ellerbrock2/cv" target="_blank"><i class="icofont-xing linkedin"></i></a>
+
+  <div class="v-card__contact">
+    <h2>Kontakt</h2>
+    <ul>
+      <li>Frechener Weg 87<br>50859 Köln</li>
+      <li>heikoellerbrock@gmail.com</li>
+      <li>0172 6174800</li>
+    </ul>
+    <div class="v-card__contact-social">
+      <a href="https://www.linkedin.com/in/heiko-ellerbrock-a57643157/" target="_blank"><i
+        class="icofont-linkedin linkedin"></i></a>
+      <a href="https://www.xing.com/profile/Heiko_Ellerbrock2/cv" target="_blank"><i class="icofont-xing linkedin"></i></a>
+    </div>
+  </div>
 </div>
