--- a/src/modules/navigation/components/navigation/navigation.component.scss
+++ b/src/modules/navigation/components/navigation/navigation.component.scss
@@ -34,15 +34,16 @@
 
     h1 {
       color: #fff;
-      font-size: 1rem;
+      font-size: 1.2rem;
       line-height: 1.4;
     }
 
     h2 {
-      font-size: .7rem;
-      color: #ddd;
+      font-size: .8rem;
+      color: #fff;
       letter-spacing: 1px;
       line-height: 1;
+      font-weight: 300;
     }
   }
 
