--- a/src/styles/_default.scss
+++ b/src/styles/_default.scss
@@ -3,7 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Roboto', Fallback, sans-serif;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 400;
 }
 
@@ -22,13 +22,13 @@ body {
 }
 
 a, p {
-  font-size: 1.4rem;
   line-height: 1.4;
   letter-spacing: .5px;
 }
 
 p {
-  margin-bottom: 8px;
+  margin-bottom: $space-phone;
+  cursor: default;
 }
 
 a, p, li {
@@ -42,6 +42,29 @@ h1, h2, h3, h4, h5 {
   padding: 0;
   outline: none;
   font-weight: 300;
+  cursor: default;
+}
+
+h2 {
+  font-size: 1.2rem;
+  font-weight: 500;
+  line-height: 1.2;
+  margin-bottom: 4px;
+  color: #444;
+}
+
+em {
+  font-weight: 600;
+  font-style: normal;
+}
+
+ul {
+  padding-left: 20px;
+  margin-bottom: $space-phone;
+
+  li {
+    margin: 2px 0;
+  }
 }
 
 @include breakpoint('phone-landscape') {
