--- a/src/modules/content/components/v-card/v-card.component.html
+++ b/src/modules/content/components/v-card/v-card.component.html
@@ -1,57 +1,61 @@
-<div class="v-card-portrait">
-  <img
-    src="../../../../assets/img/portrait-M.JPG"
-    srcset="../../../../assets/img/portrait-S.JPG 600w, assets/img/portrait-M.JPG 960w, assets/img/portrait-L.JPG 2400w"
-    alt="Portrait von Heiko Ellerbrock"
-  />
-</div>
-<div class="v-card-content">
-  <p>
-    Hallo!
-  </p>
-  <p>
-    Mein Name ist Heiko und ich arbeite als <em>Freelancer</em> in der <em>Software-Entwicklung</em>. Seit über 10
-    Jahren durfte ich
-    Erfahrungen in der Entwicklung skalierbarer <em>Web-Applikationen</em> und <em>E-Commerce Lösungen</em> machen.
-    Dabei liegt mein
-    persönlicher Fokus auf dem Frontend und den Benutzern.
-  </p>
-  <p>
-    Technologisch liegt mein Schwerpunkt auf <em>JavaScript</em> und dort vor allem auf der Entwicklung mit
-    <em>Angular</em>. Ich habe 2010 bereits mit <em>ES5</em>, <em>HTML4</em>, <em>CSS2</em> und ersten Version von
-    <em>AngularJS</em> begonnen. Damals tatsächlich noch mit responsivem Design für den <em>Internet Explorer 7</em>.
-  </p>
-  <p>
-    Mittlerweile sind es selbstverständlich die neusten Versionen dieser Technologien: <em>ES6</em>, <em>HTML5</em>,
-    <em>CSS3</em>, <em>SCSS</em>, <em>Angular</em> und andere. Aber auch <em>React</em>, <em>Vue</em> und
-    <em>NodeJS</em>
-    habe ich bereits erfolgreich und mit viel Freude eingesetzt.
-  </p>
-  <p>
-    Dabei war ich in den unterschiedlichsten Branchen tätig:
-  </p>
-  <ul>
-    <li><em>Gesundheitswesen</em></li>
-    <li><em>Telekommunikation</em></li>
-    <li><em>Personalberatung</em></li>
-    <li><em>Sport</em></li>
-    <li><em>Versicherungen und Finanzen</em></li>
-    <li><em>Handel</em></li>
-    <li><em>Industrie</em></li>
-    <li><em>Medien</em></li>
-  </ul>
-
-  <div class="v-card__contact">
-    <h2>Kontakt</h2>
+<div class="container">
+  <div class="v-card-portrait big">
+    <img
+      src="../../../../assets/img/portrait-M.JPG"
+      srcset="../../../../assets/img/portrait-S.JPG 600w, assets/img/portrait-M.JPG 960w, assets/img/portrait-L.JPG 2400w"
+      alt="Portrait von Heiko Ellerbrock"
+    />
+  </div>
+  <div class="v-card-content">
+    <p>
+      Hallo!
+    </p>
+    <p>
+      <img
+        class="v-card-portrait small"
+        src="../../../../assets/img/portrait-M.JPG"
+        srcset="../../../../assets/img/portrait-S.JPG 600w, assets/img/portrait-M.JPG 960w, assets/img/portrait-L.JPG 2400w"
+        alt="Portrait von Heiko Ellerbrock"
+      />
+      Mein Name ist Heiko und ich arbeite als <em>Freelancer</em> in der <em>Software-Entwicklung</em>. Seit über 10
+      Jahren durfte ich
+      Erfahrungen in der Entwicklung skalierbarer <em>Web-Applikationen</em> und <em>E-Commerce Lösungen</em> machen.
+      Dabei liegt mein
+      persönlicher Fokus auf dem Frontend und den Benutzern.<br><br>
+      Technologisch liegt mein Schwerpunkt auf <em>JavaScript</em> und dort vor allem auf der Entwicklung mit
+      <em>Angular</em>. Ich habe 2010 bereits mit <em>ES5</em>, <em>HTML4</em>, <em>CSS2</em> und ersten Version von
+      <em>AngularJS</em> begonnen. Damals tatsächlich noch mit responsivem Design für den <em>Internet Explorer 7</em>.
+      <br><br>
+      Mittlerweile sind es selbstverständlich die neusten Versionen dieser Technologien: <em>ES6</em>, <em>HTML5</em>,
+      <em>CSS3</em>, <em>SCSS</em>, <em>Angular</em> und andere. Aber auch <em>React</em>, <em>Vue</em> und
+      <em>NodeJS</em>
+      habe ich bereits erfolgreich und mit viel Freude eingesetzt. <br><br>
+      Folgende Branchen durfte ich bisher kennenlernen:
+    </p>
     <ul>
-      <li>Frechener Weg 87<br>50859 Köln</li>
-      <li>heikoellerbrock@gmail.com</li>
-      <li>0172 6174800</li>
+      <li><em>Gesundheitswesen</em></li>
+      <li><em>Telekommunikation</em></li>
+      <li><em>Personalberatung</em></li>
+      <li><em>Sport</em></li>
+      <li><em>Versicherungen und Finanzen</em></li>
+      <li><em>Handel</em></li>
+      <li><em>Industrie</em></li>
+      <li><em>Medien</em></li>
     </ul>
-    <div class="v-card__contact-social">
-      <a href="https://www.linkedin.com/in/heiko-ellerbrock-a57643157/" target="_blank"><i
-        class="icofont-linkedin linkedin"></i></a>
-      <a href="https://www.xing.com/profile/Heiko_Ellerbrock2/cv" target="_blank"><i class="icofont-xing linkedin"></i></a>
+
+    <div class="v-card__contact">
+      <h2>Kontakt</h2>
+      <ul>
+        <li>Frechener Weg 87<br>50859 Köln</li>
+        <li>heikoellerbrock@gmail.com</li>
+        <li>0172 6174800</li>
+      </ul>
+      <div class="v-card__contact-social">
+        <a href="https://www.linkedin.com/in/heiko-ellerbrock-a57643157/" target="_blank"><i
+          class="icofont-linkedin linkedin"></i></a>
+        <a href="https://www.xing.com/profile/Heiko_Ellerbrock2/cv" target="_blank"><i
+          class="icofont-xing linkedin"></i></a>
+      </div>
     </div>
   </div>
 </div>
