--- a/src/modules/navigation/components/main-menu/main-menu.component.html
+++ b/src/modules/navigation/components/main-menu/main-menu.component.html
@@ -1,4 +1,4 @@
-<div class="main-menu" [ngClass]="{'transparent': isTransparent}">
+<div class="main-menu">
   <ul>
     <li *ngFor="let link of menuLinks">{{link.title}}</li>
   </ul>
