--- a/src/modules/navigation/components/main-menu/main-menu.component.scss
+++ b/src/modules/navigation/components/main-menu/main-menu.component.scss
@@ -3,26 +3,30 @@
 :host {
   display: none;
 
-  @include breakpoint(tablet) {
-    display: flex;
+  @include breakpoint('desktop') {
+    display: block;
+    height: 100%;
 
     .main-menu {
+      height: 100%;
+      display: flex;
+      align-items: center;
+
       ul {
+        padding: 0 $space-tablet 0 0;
+        margin: 0;
         display: flex;
         list-style-type: none;
-        transition: opacity .5s ease;
 
         li {
-          padding: 20px 12px;
-          font-size: 1.2rem;
-          transition: color 1s ease;
-        }
-      }
+          font-size: 1rem;
+          color: #fff;
+          padding: 12px;
+          cursor: pointer;
+          border-radius: 4px;
 
-      &.transparent {
-        ul {
-          li {
-            color: rgba(255, 255, 255, .7);
+          &:hover {
+            background-color: rgba(255,255,255,.2);
           }
         }
       }
