--- a/src/modules/navigation/components/navigation/navigation.component.html
+++ b/src/modules/navigation/components/navigation/navigation.component.html
@@ -4,6 +4,6 @@
     <h2>Frontend Engineer</h2>
   </a>
 
-  <app-mobile-menu [isTransparent]="pageIsScrolled"></app-mobile-menu>
-  <app-main-menu [isTransparent]="pageIsScrolled"></app-main-menu>
+  <app-mobile-menu></app-mobile-menu>
+  <app-main-menu></app-main-menu>
 </div>
