WIP: contactbox header

--- a/src/modules/content/components/v-card/v-card.component.html
+++ b/src/modules/content/components/v-card/v-card.component.html
@@ -45,16 +45,18 @@
 
     <div class="v-card__contact">
       <h2>Kontakt</h2>
-      <ul>
-        <li>Frechener Weg 87<br>50859 Köln</li>
-        <li>heikoellerbrock@gmail.com</li>
-        <li>0172 6174800</li>
-      </ul>
-      <div class="v-card__contact-social">
-        <a href="https://www.linkedin.com/in/heiko-ellerbrock-a57643157/" target="_blank"><i
-          class="icofont-linkedin linkedin"></i></a>
-        <a href="https://www.xing.com/profile/Heiko_Ellerbrock2/cv" target="_blank"><i
-          class="icofont-xing linkedin"></i></a>
+      <div class="wrapper">
+        <ul>
+          <li>Frechener Weg 87<br>50859 Köln</li>
+          <li>heikoellerbrock@gmail.com</li>
+          <li>0172 6174800</li>
+        </ul>
+        <div class="v-card__contact-social">
+          <a href="https://www.linkedin.com/in/heiko-ellerbrock-a57643157/" target="_blank"><i
+            class="icofont-linkedin linkedin"></i></a>
+          <a href="https://www.xing.com/profile/Heiko_Ellerbrock2/cv" target="_blank"><i
+            class="icofont-xing linkedin"></i></a>
+        </div>
       </div>
     </div>
   </div>
