--- a/src/modules/content/components/v-card/v-card.component.scss
+++ b/src/modules/content/components/v-card/v-card.component.scss
@@ -50,6 +50,9 @@
     border-radius: 4px;
     border: 1px solid #333;
     background-color: $color-primary-blue;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
     h2 {
       text-align: center;
@@ -57,36 +60,40 @@
       padding: $space-phone * 2 $space-phone $space-phone;
       cursor: default;
     }
-    ul {
-      padding: 0 $space-phone;
-      list-style-type: none;
 
-      li {
-        padding: 4px 0;
-        text-align: center;
-        color: #ddd;
-        cursor: default;
-      }
-    }
+    .wrapper {
+      ul {
+        padding: 0 $space-phone;
+        list-style-type: none;
 
-    &-social {
-      display: flex;
-      justify-content: space-evenly;
-      width: 100%;
-      padding-bottom: $space-phone;
-
-      a {
-        text-decoration: none;
-        padding: $space-phone;
-        border-radius: 4px;
-        &:hover {
-          background-color: rgba(255,255,255,.1);
+        li {
+          padding: 4px 0;
+          text-align: center;
+          color: #ddd;
+          cursor: default;
         }
       }
+      .v-card__contact-social {
+        display: flex;
+        justify-content: space-evenly;
+        width: 100%;
+        max-width: 400px;
 
-      i {
-        font-size: 2rem;
-        color: #fff;
+        padding-bottom: $space-phone;
+
+        a {
+          text-decoration: none;
+          padding: $space-phone;
+          border-radius: 4px;
+          &:hover {
+            background-color: rgba(255,255,255,.1);
+          }
+        }
+
+        i {
+          font-size: 2rem;
+          color: #fff;
+        }
       }
     }
   }
@@ -94,6 +101,27 @@
   @include breakpoint('tablet') {
     .v-card-content {
       padding: 32px $space-tablet;
+    }
+
+    .v-card__contact {
+      border-radius: 4px;
+      border: 1px solid #333;
+      background-color: $color-primary-blue;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      h2 {
+        text-align: center;
+        color: #fff;
+        padding: $space-phone * 2 $space-phone $space-phone;
+        cursor: default;
+      }
+
+      .wrapper {
+        display: flex;
+
+      }
     }
   }
 
