--- a/src/modules/content/components/v-card/v-card.component.scss
+++ b/src/modules/content/components/v-card/v-card.component.scss
@@ -7,120 +7,137 @@
   background-color: #fff;
   @include shadow();
 
-  .v-card-portrait {
-    width: 100%;
-    text-align: center;
+  .v-card {
+    &__content {
+      display: flex;
+      flex-direction: column;
+      flex: 1;
+      padding-top: 32px;
 
-    img {
-      width: 100%;
-      max-width: 400px;
-    }
-
-    &.big {
-      @include breakpoint('phone-landscape') {
-        display: none;
-      }
-    }
-
-    &.small {
-      display: none;
-      float: right;
-      width: 150px;
-      padding: 0 0 $space-phone $space-phone;
-
-      @include breakpoint('phone-landscape') {
-        display: inline;
+      .wrapper {
+        display: flex;
+        flex-direction: column;
       }
 
-      @include breakpoint('tablet') {
-        width: 260px;
-        padding: 0 0 $space-tablet $space-tablet;
-      }
-    }
-  }
+      &-portrait {
+        display: flex;
 
-  .v-card-content {
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-    padding: 32px $space-phone;
-  }
-
-  .v-card__contact {
-    border-radius: 4px;
-    border: 1px solid #333;
-    background-color: $color-primary-blue;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    h2 {
-      text-align: center;
-      color: #fff;
-      padding: $space-phone * 2 $space-phone $space-phone;
-      cursor: default;
-    }
-
-    .wrapper {
-      ul {
-        padding: 0 $space-phone;
-        list-style-type: none;
-
-        li {
-          padding: 4px 0;
-          text-align: center;
-          color: #ddd;
-          cursor: default;
+        img {
+          width: 100%;
+          max-width: 400px;
         }
       }
-      .v-card__contact-social {
-        display: flex;
-        justify-content: space-evenly;
-        width: 100%;
-        max-width: 400px;
 
-        padding-bottom: $space-phone;
+      &-description {
+        padding: 0 $space-phone;
 
-        a {
-          text-decoration: none;
-          padding: $space-phone;
-          border-radius: 4px;
-          &:hover {
-            background-color: rgba(255,255,255,.1);
+        ul {
+          li {
+            font-weight: 500;
+            padding: 4px 0;
+            margin: 0;
+          }
+        }
+      }
+    }
+
+    &__contact {
+      //display: flex;
+      //flex-direction: column;
+      //align-items: center;
+
+      .wrapper {
+        //padding: 0 40px 20px 40px;
+        //border-radius: 4px;
+        //border: 1px solid #333;
+        background-color: $color-primary-blue;
+
+        h2 {
+          text-align: center;
+          color: #fff;
+          padding: $space-phone * 2 $space-phone $space-phone;
+          cursor: default;
+          font-size: 1.4rem;
+        }
+
+        ul {
+          padding: 0 $space-phone;
+          list-style-type: none;
+
+          li {
+            padding: 4px 0;
+            text-align: center;
+            color: #ddd;
+            cursor: default;
           }
         }
 
-        i {
-          font-size: 2rem;
-          color: #fff;
+        .v-card__contact-social {
+          display: flex;
+          justify-content: space-evenly;
+          width: 100%;
+          max-width: 400px;
+
+          a {
+            text-decoration: none;
+            padding: $space-phone;
+            border-radius: 4px;
+
+            &:hover {
+              background-color: rgba(255, 255, 255, .1);
+            }
+          }
+
+          i {
+            font-size: 2rem;
+            color: #fff;
+          }
         }
       }
     }
   }
 
   @include breakpoint('tablet') {
-    .v-card-content {
-      padding: 32px $space-tablet;
+    .v-card {
+      &__content {
+        .wrapper {
+          flex-direction: row;
+        }
+
+        &-portrait {
+          margin-left: $space-tablet;
+        }
+      }
     }
 
-    .v-card__contact {
-      border-radius: 4px;
-      border: 1px solid #333;
-      background-color: $color-primary-blue;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+    //.v-card__contact {
+    //  border-radius: 4px;
+    //  border: 1px solid #333;
+    //  background-color: $color-primary-blue;
+    //  display: flex;
+    //  flex-direction: column;
+    //  align-items: center;
+    //
+    //  h2 {
+    //    text-align: center;
+    //    color: #fff;
+    //    padding: $space-phone * 2 $space-phone $space-phone;
+    //    cursor: default;
+    //  }
+    //
+    //  .wrapper {
+    //    display: flex;
+    //
+    //  }
+    //}
+  }
 
-      h2 {
-        text-align: center;
-        color: #fff;
-        padding: $space-phone * 2 $space-phone $space-phone;
-        cursor: default;
-      }
-
-      .wrapper {
-        display: flex;
-
+  @include breakpoint('tablet') {
+    .v-card {
+      &__content {
+        &-portrait {
+          margin-left: $space-desktop;
+        }
       }
     }
   }
