--- a/src/modules/navigation/components/navigation/navigation.component.html
+++ b/src/modules/navigation/components/navigation/navigation.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <a class="page-headline" routerLink="/">
     <h1>Heiko Ellerbrock</h1>
-    <h2>Frontend Engineer</h2>
+    <h2>Frontend Developer</h2>
   </a>
 
   <app-mobile-menu></app-mobile-menu>
