--- a/src/modules/navigation/components/navigation/navigation.component.scss
+++ b/src/modules/navigation/components/navigation/navigation.component.scss
@@ -31,6 +31,8 @@
       color: #fff;
       font-size: 1.2rem;
       line-height: 1.4;
+      margin: 0;
+      padding: 0;
     }
 
     h2 {
@@ -39,6 +41,8 @@
       letter-spacing: 1px;
       line-height: 1;
       font-weight: 300;
+      margin: 0;
+      padding: 0;
     }
   }
 
