--- a/src/styles/_default.scss
+++ b/src/styles/_default.scss
@@ -46,10 +46,10 @@ h1, h2, h3, h4, h5 {
 }
 
 h2 {
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   font-weight: 500;
   line-height: 1.2;
-  margin-bottom: 4px;
+  margin-bottom: $space-phone;
   color: #444;
 }
 
@@ -71,7 +71,6 @@ ul {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: center;
   width: 100%;
   max-width: 960px;
   height: 100%;
