--- a/src/modules/content/components/v-card/v-card.component.html
+++ b/src/modules/content/components/v-card/v-card.component.html
@@ -2,9 +2,9 @@
   <div class="v-card__content">
     <div class="wrapper">
       <div class="v-card__content-description">
-        <h2>Hallo!</h2>
+        <h2>Herzlich Willkommen!</h2>
         <p>
-          mein Name ist Heiko Ellerbrock und ich lebe und arbeite in Köln als <em>Freelance Frontend Developer</em> mit den
+          Mein Name ist Heiko Ellerbrock und ich lebe und arbeite in Köln als <em>Freelance Frontend Developer</em> mit den
           Schwerpunkten <em>Frontend</em>, <em>UI</em>, <em>UX</em>, <em>JavaScript</em>, <em>TypeScript</em>,
           <em>Angular</em>, <em>React</em> und <em>Vue</em>.<br><br>
           Seit über 10 Jahren bin ich an der Entwicklung skalierbarer <em>Web-Applikationen</em> und <em>E-Commerce
