--- a/src/modules/content/components/about-me/about-me.component.html
+++ b/src/modules/content/components/about-me/about-me.component.html
@@ -1,4 +1,4 @@
-<h2>Über mich</h2>
+<h2>Persönliches</h2>
 <div class="row">
   <div class="col">
     <h3>Entwicklung</h3>
@@ -21,9 +21,10 @@
   </div>
   <div class="col">
     <h3>Kaizen</h3>
-    <p>Strukturiertes Arbeiten reicht von transparenter Kommunikation und klarer Verantwortung, über
-      sinnvoll dokumentierte Artefakte bis hin zur aufgeräumten Codebasis.<br>Ich strebe in allen Arbeitsbereichen
-      kontinuierlich nach Effizienz und lebe das Prinzip des <a href="https://de.wikipedia.org/wiki/Kaizen"
-                                                                target="_blank">Kaizen</a>.</p>
+    <p>Strukturiertes Arbeiten ist die Grundlage aller Gewerke. Es reicht von transparenter Kommunikation über klare
+      Verantwortung hin zu sinnvoll dokumentierten Artefakten.<br>Ich strebe in allen Arbeitsbereichen
+      kontinuierlich nach Effizienz und lebe das Prinzip des
+      <a href="https://de.wikipedia.org/wiki/Kaizen" target="_blank">Kaizen</a>.
+    </p>
   </div>
 </div>
