--- a/src/modules/content/components/v-card/v-card.component.scss
+++ b/src/modules/content/components/v-card/v-card.component.scss
@@ -42,20 +42,14 @@
     }
 
     &__contact {
-      //display: flex;
-      //flex-direction: column;
-      //align-items: center;
-
       .wrapper {
-        //padding: 0 40px 20px 40px;
-        //border-radius: 4px;
-        //border: 1px solid #333;
         background-color: $color-primary-blue;
 
         h2 {
           text-align: center;
           color: #fff;
-          padding: $space-phone * 2 $space-phone $space-phone;
+          padding: $space-phone * 2 0 $space-phone 0;
+          margin: 0;
           cursor: default;
           font-size: 1.4rem;
         }
@@ -71,27 +65,28 @@
             cursor: default;
           }
         }
+      }
 
-        .v-card__contact-social {
-          display: flex;
-          justify-content: space-evenly;
-          width: 100%;
-          max-width: 400px;
+      &-social {
+        display: flex;
+        justify-content: space-evenly;
+        width: 100%;
+        max-width: 400px;
+        padding-bottom: $space-phone;
 
-          a {
-            text-decoration: none;
-            padding: $space-phone;
-            border-radius: 4px;
+        a {
+          text-decoration: none;
+          padding: $space-phone;
+          border-radius: 4px;
 
-            &:hover {
-              background-color: rgba(255, 255, 255, .1);
-            }
+          &:hover {
+            background-color: rgba(255, 255, 255, .1);
           }
+        }
 
-          i {
-            font-size: 2rem;
-            color: #fff;
-          }
+        i {
+          font-size: 2rem;
+          color: #fff;
         }
       }
     }
