--- a/src/styles/_default.scss
+++ b/src/styles/_default.scss
@@ -3,7 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Roboto', Fallback, sans-serif;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 400;
 }
 
@@ -23,7 +23,6 @@ body {
 
 a, p {
   line-height: 1.4;
-  letter-spacing: .5px;
 }
 
 p {
@@ -35,6 +34,10 @@ a, p, li {
   color: #666;
 }
 
+a {
+  font-weight: 500;
+}
+
 h1, h2, h3, h4, h5 {
   font-size: 1rem;
   line-height: 1;
@@ -43,6 +46,7 @@ h1, h2, h3, h4, h5 {
   outline: none;
   font-weight: 300;
   cursor: default;
+  color: #444;
 }
 
 h2 {
@@ -50,7 +54,13 @@ h2 {
   font-weight: 500;
   line-height: 1.2;
   margin-bottom: $space-phone;
-  color: #444;
+}
+
+h3 {
+  font-size: 1.2rem;
+  font-weight: 400;
+  line-height: 1.2;
+  margin-bottom: $space-phone / 2;
 }
 
 em {
