Mobile: Navigation Links

--- a/src/modules/app/components/content/content.component.html
+++ b/src/modules/app/components/content/content.component.html
@@ -8,7 +8,7 @@
   <app-services></app-services>
 </div>
 <div class="row">
-  <app-portfolio></app-portfolio>
+  <app-project-list></app-project-list>
 </div>
 <div class="row">
   <app-working-experience></app-working-experience>
