--- a/src/modules/content/components/v-card/v-card.component.html
+++ b/src/modules/content/components/v-card/v-card.component.html
@@ -31,6 +31,7 @@
       </div>
     </div>
   </div>
+  <!--  TODO: Contact-Box: Linking phone and email-->
   <div class="v-card__contact">
     <div class="wrapper">
       <h2>Kontakt</h2>
