--- a/src/modules/app/components/content/content.component.html
+++ b/src/modules/app/components/content/content.component.html
@@ -2,10 +2,7 @@
   <app-about-me></app-about-me>
 </div>
 <div class="row">
-  <app-skills></app-skills>
-</div>
-<div class="row">
-  <app-services></app-services>
+  <app-technologies></app-technologies>
 </div>
 <div class="row">
   <app-project-list></app-project-list>
