--- a/src/modules/content/components/v-card/v-card.component.html
+++ b/src/modules/content/components/v-card/v-card.component.html
@@ -4,23 +4,29 @@
       <div class="v-card__content-description">
         <h2>Herzlich Willkommen!</h2>
         <p>
-          Mein Name ist Heiko Ellerbrock und ich lebe und arbeite in Köln als <em>Freelance Frontend Developer</em> mit den
+          Mein Name ist Heiko Ellerbrock und ich lebe und arbeite in Köln als <em>Freelance Frontend Developer</em> mit
+          den
           Schwerpunkten <em>Frontend</em>, <em>UI</em>, <em>UX</em>, <em>JavaScript</em>, <em>TypeScript</em>,
-          <em>Angular</em>, <em>React</em> und <em>Vue</em>.<br><br>
-          Seit über 10 Jahren bin ich an der Entwicklung skalierbarer <em>Web-Applikationen</em> und <em>E-Commerce
-          Lösungen</em> in den Branchen <i>Gesundheitswesen</i>, <i>Telekommunikation</i>, <i>Personalberatung</i>,
-          <i>Sport</i>,
-          <i>Handel</i>, <i>Medien</i>, <i>Industrie</i> und <i>Versicherungen und Finanzen</i> beteiligt.<br><br>
-
-          Wenn Sie Unterstützung bei Ihren Projekten wünschen, fragen Sie mich sehr gerne zu folgenden Dienstleistungen an:
+          <em>Angular</em>, <em>React</em> und <em>Vue</em>.
         </p>
+        <p>
+          Seit über 10 Jahren bin ich an der Entwicklung skalierbarer <em>Web-Applikationen</em> und <em>E-Commerce
+          Lösungen</em> beteiligt:<br>
+        </p>
+        <h3>Branchen</h3>
+        <p>
+          <i>Gesundheitswesen</i>, <i>Telekommunikation</i>, <i>Personalberatung</i>,
+          <i>Sport</i>,
+          <i>Handel</i>, <i>Medien</i>, <i>Industrie</i>, <i>Versicherungen</i>, <i>Finanzen</i>, ...
+        </p>
+        <h3>Dienstleistungen</h3>
         <ul>
           <li>Frontend Entwicklung</li>
           <li>Technische Konzeption</li>
-          <li>Performance Analyse</li>
           <li>Beratung</li>
           <li>Mentoring / Schulung</li>
         </ul>
+        <p>Wenn Sie Unterstützung bei Ihren Projekten wünschen, fragen Sie mich sehr gerne an!</p>
       </div>
       <div class="v-card__content-portrait">
         <img
