--- a/src/modules/content/components/v-card/v-card.component.scss
+++ b/src/modules/content/components/v-card/v-card.component.scss
@@ -33,7 +33,6 @@
 
         ul {
           li {
-            font-weight: 500;
             padding: 4px 0;
             margin: 0;
           }
@@ -44,6 +43,7 @@
     &__contact {
       .wrapper {
         background-color: $color-primary-blue;
+        padding: 0 $space-phone;
 
         h2 {
           text-align: center;
@@ -52,6 +52,11 @@
           margin: 0;
           cursor: default;
           font-size: 1.4rem;
+        }
+
+        p {
+          color: #ddd;
+          text-align: center;
         }
 
         ul {
