--- a/src/modules/content/components/v-card/v-card.component.html
+++ b/src/modules/content/components/v-card/v-card.component.html
@@ -13,20 +13,24 @@
           Seit über 10 Jahren bin ich an der Entwicklung skalierbarer <em>Web-Applikationen</em> und <em>E-Commerce
           Lösungen</em> beteiligt:<br>
         </p>
-        <h3>Branchen</h3>
         <p>
-          <i>Gesundheitswesen</i>, <i>Telekommunikation</i>, <i>Personalberatung</i>,
-          <i>Sport</i>,
-          <i>Handel</i>, <i>Medien</i>, <i>Industrie</i>, <i>Versicherungen</i>, <i>Finanzen</i>, ...
+          In folgenden Branchen war ich bisher tätig: <em>Gesundheitswesen</em>, <em>Telekommunikation</em>,
+          <em>Handel</em>, <em>Personalberatung</em>, <em>Sport</em>, <em>Medien</em>, <em>Industrie</em>,
+          <em>Versicherungen</em>, <em>Finanzen</em>
         </p>
-        <h3>Dienstleistungen</h3>
+        <p>
+          Wenn Sie Unterstützung für Ihre Projekte wünschen, fragen Sie mich sehr gerne zu folgenden
+          <em>Dienstleistungen</em> an:
+        </p>
         <ul>
           <li>Frontend Entwicklung</li>
           <li>Technische Konzeption</li>
+          <li>Anforderungsmanagement</li>
+          <li>Performance Analyse</li>
           <li>Beratung</li>
           <li>Mentoring / Schulung</li>
         </ul>
-        <p>Wenn Sie Unterstützung bei Ihren Projekten wünschen, fragen Sie mich sehr gerne an!</p>
+
       </div>
       <div class="v-card__content-portrait">
         <img
