--- a/src/modules/content/components/v-card/v-card.component.scss
+++ b/src/modules/content/components/v-card/v-card.component.scss
@@ -33,7 +33,7 @@
 
         ul {
           li {
-            padding: 4px 0;
+            line-height: 1.4;
             margin: 0;
           }
         }
