--- a/src/styles/_grid.scss
+++ b/src/styles/_grid.scss
@@ -1,7 +1,7 @@
 .row {
   width: 100%;
   max-width: 960px;
-  padding: 0 20px;
+  padding: 0 $space-phone;
 
   & + .row {
     margin-top: 40px;
@@ -11,7 +11,6 @@
     padding: 0;
     display: flex;
     flex-direction: column;
-    align-items: center;
 
     & + .row {
       margin-top: $space-phone;
