--- a/src/modules/content/components/technologies/technologies.component.html
+++ b/src/modules/content/components/technologies/technologies.component.html
@@ -1,2 +1,100 @@
 <h2>Technologien</h2>
-<p>Techs</p>
+<ul>
+  <li>HTML 5</li>
+  <li>
+    CSS 3
+    <ul>
+      <li>Scss</li>
+      <li>Less</li>
+    </ul>
+  </li>
+  <li>
+    JavaScript
+    <ul>
+      <li>ES5</li>
+      <li>ES6</li>
+    </ul>
+  </li>
+  <li>TypeScript</li>
+  <li>
+    JS Frameworks:
+    <ul>
+      <li>AngularJS</li>
+      <li>Angular</li>
+      <li>React</li>
+      <li>Vue</li>
+    </ul>
+  </li>
+  <li>
+    Mobile Development:
+    <ul>
+      <li>Dart</li>
+      <li>Flutter</li>
+      <li>NativeScript</li>
+    </ul>
+  </li>
+  <li>
+    Backend:
+    <ul>
+      <li>NodeJS</li>
+      <li>GraphQL</li>
+    </ul>
+  </li>
+  <li>
+    Template Engines:
+    <ul>
+      <li>Twig</li>
+      <li>JSP</li>
+      <li>etc.</li>
+    </ul>
+  </li>
+  <li>
+    Komponenten Bibliotheken:
+    <ul>
+      <li>Google Material</li>
+      <li>Bootstrap</li>
+      <li>Quasar</li>
+      <li>etc.</li>
+    </ul>
+  </li>
+  <li>
+    Package Management:
+    <ul>
+      <li>Node Package Manager (Npm)</li>
+      <li>Gulp.js</li>
+      <li>Bower</li>
+      <li>Grunt</li>
+      <li>Maven</li>
+    </ul>
+  </li>
+  <li>
+    Design Pattern
+    <ul>
+      <li>Model-View-Controller (MVC)</li>
+      <li>Model-View-ViewModel (MVVM)</li>
+      <li>Singleton</li>
+      <li>Dependency Injection</li>
+    </ul>
+  </li>
+  <li>
+    Prozesse und Methoden:
+    <ul>
+      <li>SCRUM</li>
+      <li>Kanban</li>
+    </ul>
+  </li>
+  <li>
+    Weiteres:
+    <ul>
+      <li>SPA</li>
+      <li>PWA</li>
+      <li>Cross Platform Apps</li>
+      <li>REST</li>
+      <li>SSR</li>
+      <li>CI / CD</li>
+      <li>W3C & SEO</li>
+      <li>UI / UX Design</li>
+    </ul>
+  </li>
+</ul>
+
