--- a/src/modules/content/components/v-card/v-card.component.html
+++ b/src/modules/content/components/v-card/v-card.component.html
@@ -1,4 +1,4 @@
-<div class="v-card container">
+<div class="v-card">
   <div class="v-card__content">
     <div class="wrapper">
       <div class="v-card__content-description">
