--- a/src/modules/app/components/app/app.component.html
+++ b/src/modules/app/components/app/app.component.html
@@ -1,3 +1,5 @@
 <app-header></app-header>
-<app-content></app-content>
+<div class="container">
+  <app-content></app-content>
+</div>
 <app-footer></app-footer>
