--- a/src/modules/app/components/content/content.component.scss
+++ b/src/modules/app/components/content/content.component.scss
@@ -6,6 +6,8 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
+  padding-top: 40px;
+  background-color: #fff;
 
   .row {
     z-index: 2000;
