--- a/src/modules/app/components/content/content.component.html
+++ b/src/modules/app/components/content/content.component.html
@@ -1,15 +1,6 @@
-<div class="row">
-  <app-about-me></app-about-me>
-</div>
-<div class="row">
-  <app-technologies></app-technologies>
-</div>
-<div class="row">
-  <app-project-list></app-project-list>
-</div>
-<div class="row">
-  <app-working-experience></app-working-experience>
-</div>
-<div class="row">
-  <app-education></app-education>
-</div>
+<app-v-card></app-v-card>
+<app-about-me></app-about-me>
+<app-technologies></app-technologies>
+<app-project-list></app-project-list>
+<app-working-experience></app-working-experience>
+<app-education></app-education>
