--- a/src/modules/app/components/content/content.component.scss
+++ b/src/modules/app/components/content/content.component.scss
@@ -6,10 +6,14 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  padding-top: 40px;
   background-color: #fff;
+  padding-top: 60px;
 
   .row {
     z-index: 2000;
+  }
+
+  @include breakpoint('tablet') {
+    padding-top: 80px;
   }
 }
