--- a/src/modules/navigation/components/navigation/navigation.component.scss
+++ b/src/modules/navigation/components/navigation/navigation.component.scss
@@ -5,7 +5,7 @@
   background-color: $color-primary-blue;
   display: flex;
   height: 60px;
-  justify-content: center;
+  justify-content: space-between;
   left: 0;
   position: fixed;
   right: 0;
