--- a/src/modules/content/components/technologies/technologies.component.html
+++ b/src/modules/content/components/technologies/technologies.component.html
@@ -37,7 +37,7 @@
     Backend:
     <ul>
       <li>NodeJS</li>
-      <li>GraphQL</li>
+      <li>MongoDB</li>
     </ul>
   </li>
   <li>
@@ -94,7 +94,31 @@
       <li>CI / CD</li>
       <li>W3C & SEO</li>
       <li>UI / UX Design</li>
+      <li>GraphQL</li>
+      <li>GIT</li>
+    </ul>
+  </li>
+  <li>
+    Tools:
+    <ul>
+      <li>
+        Atlassian Product Family:
+        <ul>
+          <li>Jira</li>
+          <li>Confluence</li>
+          <li>Trello</li>
+          <li>Bitbucket</li>
+        </ul>
+      </li>
+      <li>Gitlab</li>
+      <li>Github</li>
+      <li>IntelliJ</li>
+      <li>Visual Studio Code</li>
+      <li>Postman</li>
+      <li>Teams / Slack</li>
     </ul>
   </li>
 </ul>
+
+<p> ... and further more ...</p>
 
