Mobile: Work Experience

--- a/src/modules/content/components/technologies/technologies.component.html
+++ b/src/modules/content/components/technologies/technologies.component.html
@@ -38,6 +38,7 @@
     <ul>
       <li>NodeJS</li>
       <li>MongoDB</li>
+      <li>PHP</li>
     </ul>
   </li>
   <li>
@@ -86,6 +87,13 @@
   <li>
     Weiteres:
     <ul>
+      <li>
+        CMS
+        <ul>
+          <li>Wordpress</li>
+          <li>Sulu (headless CMS)</li>
+        </ul>
+      </li>
       <li>SPA</li>
       <li>PWA</li>
       <li>Cross Platform Apps</li>
