--- a/src/modules/content/components/v-card/v-card.component.scss
+++ b/src/modules/content/components/v-card/v-card.component.scss
@@ -42,7 +42,7 @@
 
     &__contact {
       .wrapper {
-        background-color: $color-primary-blue;
+        background-color: $color-primary;
         padding: 0 $space-phone;
 
         h2 {
