--- a/src/modules/navigation/components/navigation/navigation.component.scss
+++ b/src/modules/navigation/components/navigation/navigation.component.scss
@@ -2,7 +2,7 @@
 
 :host {
   align-items: center;
-  background-color: $color-primary-blue;
+  background-color: $color-primary;
   display: flex;
   height: 60px;
   justify-content: space-between;
