--- a/src/modules/ui-timeline/components/timeline-item/timeline-item.component.scss
+++ b/src/modules/ui-timeline/components/timeline-item/timeline-item.component.scss
@@ -5,45 +5,47 @@
   display: block;
   cursor: default;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  padding: 12px;
   margin-bottom: 20px;
   background-color: #fff;
-  border-top: 4px solid $color-blue;
+  border-radius: 4px;
+  overflow: hidden;
 
-  .date {
+  &:last-of-type {
+    margin-bottom: 0;
+  }
+
+  p.date {
     text-align: center;
-    color: cornflowerblue;
-    margin: 8px 0 28px;
-    font-weight: 700;
+    margin-bottom: $space-phone;
+    color: #fff;
+    font-weight: 500;
+    background-color: $color-secondary;
+    padding: $space-phone / 2 0;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+  }
 
-    span {
-      font-size: 1.4rem;
-      font-weight: 700;
-    }
+  .content {
+    padding: 0 $space-phone;
   }
 
   h2 {
-    border: none;
-    padding: 0;
-    margin: 0 0 4px 0;
-    font-size: 1.8rem;
+    text-align: center;
+    margin-bottom: 4px;
   }
 
   h3 {
-    border: none;
     padding: 0;
     margin: 0 0 28px 0;
-    font-size: 1.2rem;
-    text-transform: uppercase;
+    font-size: 1rem;
     color: #878787;
-    letter-spacing: .5px;
-  }
-
-  p {
-    font-size: 1.6rem;
-    line-height: 1.5;
     text-align: center;
   }
+
+  p.technologies {
+    text-align: center;
+  }
+
 
   @media all and (min-width: 600px) {
     flex: 50%;
