--- a/src/modules/ui-timeline/components/timeline/timeline.component.scss
+++ b/src/modules/ui-timeline/components/timeline/timeline.component.scss
@@ -12,7 +12,7 @@
     top: 0;
     left: 50%;
     margin-left: -2px;
-    background-color: $color-blue-transparent;
+    background-color: $color-secondary;
   }
 
   .timeline-items {
